[gd_scene load_steps=23 format=3 uid="uid://coen6qetgxmxk"]

[ext_resource type="Shader" path="res://char/player/player.gdshader" id="1_8too3"]
[ext_resource type="Script" path="res://char/player/player.gd" id="1_hnrld"]
[ext_resource type="Texture2D" uid="uid://cwkipgv24gp7y" path="res://Mario1/Characters/Mario.png" id="1_x6tic"]
[ext_resource type="PackedScene" uid="uid://7wbs41pawh7g" path="res://char/player/fire/fire.tscn" id="2_8d4cx"]
[ext_resource type="AudioStream" uid="uid://cdyddyrv15agv" path="res://sound/coin.wav" id="3_0obg3"]
[ext_resource type="PackedScene" uid="uid://5vmnmc36pis8" path="res://char/player/doll/player_die_doll.tscn" id="3_nhy7o"]

[sub_resource type="Animation" id="Animation_3p3dh"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("graphic/small:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("graphic/big:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("graphic/small:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("graphic/big:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("CollisionShape2D:shape:size")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(14, 14)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("CollisionShape2D:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 1)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("graphic/fire:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("graphic/fire:frame")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_waeni"]
resource_name = "become bigger"
length = 0.12
step = 0.04
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("graphic/small:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.04, 0.08, 0.12),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [true, false, true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("graphic/big:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.04, 0.08, 0.12),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [false, true, false, true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("graphic/big:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.06),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [8, 0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CollisionShape2D:shape:size")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.12),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(14, 14), Vector2(14, 32)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("CollisionShape2D:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.12),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 1), Vector2(0, -8)]
}

[sub_resource type="Animation" id="Animation_umlal"]
resource_name = "big hurt"
length = 0.12
step = 0.04
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("graphic/big:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.04, 0.08, 0.12),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [true, false, true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("graphic/small:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.04, 0.08, 0.12),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [true, true, true, true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CollisionShape2D:shape:size")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(14, 14)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CollisionShape2D:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 1)]
}

[sub_resource type="Animation" id="Animation_uyx1y"]
resource_name = "crouch"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("graphic/big:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [6]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("graphic/fire:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [6]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("graphic/small:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_xvv0t"]
resource_name = "fire hurt"
length = 0.12
step = 0.04
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("graphic/small:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.12),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("graphic/fire:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.04, 0.08, 0.12),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [true, false, true, false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CollisionShape2D:shape:size")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(14, 14)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CollisionShape2D:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 1)]
}

[sub_resource type="Animation" id="Animation_a4lmg"]
resource_name = "idle"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("graphic/small:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("graphic/big:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("graphic/fire:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_qj6b6"]
resource_name = "jump"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("graphic/small:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [5]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("graphic/big:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [5]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("graphic/fire:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [5]
}

[sub_resource type="Animation" id="Animation_o4d4k"]
resource_name = "on fire"
length = 0.12
step = 0.04
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("graphic/big:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.04, 0.08, 0.12),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [true, false, true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("graphic/fire:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.04, 0.08, 0.12),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [false, true, false, true]
}

[sub_resource type="Animation" id="Animation_agepj"]
resource_name = "turn back"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("graphic/small:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("graphic/big:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("graphic/fire:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}

[sub_resource type="Animation" id="Animation_bbl2g"]
resource_name = "walk"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("graphic/small:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [1, 2, 3]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("graphic/big:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [1, 2, 3]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("graphic/fire:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [1, 2, 3]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_p5f3t"]
_data = {
"RESET": SubResource("Animation_3p3dh"),
"become bigger": SubResource("Animation_waeni"),
"big hurt": SubResource("Animation_umlal"),
"crouch": SubResource("Animation_uyx1y"),
"fire hurt": SubResource("Animation_xvv0t"),
"idle": SubResource("Animation_a4lmg"),
"jump": SubResource("Animation_qj6b6"),
"on fire": SubResource("Animation_o4d4k"),
"turn back": SubResource("Animation_agepj"),
"walk": SubResource("Animation_bbl2g")
}

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ptf4w"]
shader = ExtResource("1_8too3")
shader_parameter/strength = 0.0
shader_parameter/speed = 50.0
shader_parameter/angle = 0.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_su3y4"]
shader = ExtResource("1_8too3")
shader_parameter/strength = 0.0
shader_parameter/speed = 50.0
shader_parameter/angle = 0.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ql3c0"]
shader = ExtResource("1_8too3")
shader_parameter/strength = 0.0
shader_parameter/speed = 50.0
shader_parameter/angle = 0.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0tey1"]
size = Vector2(14, 14)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dt0d7"]
size = Vector2(13, 2)

[node name="player" type="CharacterBody2D"]
collision_layer = 2
slide_on_ceiling = false
platform_on_leave = 1
script = ExtResource("1_hnrld")
fire = ExtResource("2_8d4cx")
die_doll = ExtResource("3_nhy7o")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_p5f3t")
}

[node name="graphic" type="Node2D" parent="."]

[node name="small" type="Sprite2D" parent="graphic"]
material = SubResource("ShaderMaterial_ptf4w")
position = Vector2(0, -8)
texture = ExtResource("1_x6tic")
hframes = 26

[node name="big" type="Sprite2D" parent="graphic"]
visible = false
material = SubResource("ShaderMaterial_su3y4")
position = Vector2(0, -8)
texture = ExtResource("1_x6tic")
hframes = 9
region_enabled = true
region_rect = Rect2(256, 0, 288, 32)

[node name="fire" type="Sprite2D" parent="graphic"]
visible = false
material = SubResource("ShaderMaterial_ql3c0")
position = Vector2(0, -8)
texture = ExtResource("1_x6tic")
hframes = 8
region_enabled = true
region_rect = Rect2(544, 0, 256, 32)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 1)
shape = SubResource("RectangleShape2D_0tey1")

[node name="jump cancel Timer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="coin" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_0obg3")

[node name="enemy checker" type="Area2D" parent="."]
position = Vector2(0, 6)
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="enemy checker"]
shape = SubResource("RectangleShape2D_dt0d7")

[node name="Marker2D" type="Marker2D" parent="."]
position = Vector2(0, -5)

[node name="shoot gap timer" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="recover timer" type="Timer" parent="."]
one_shot = true

[node name="invincible timer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[node name="coyote timer" type="Timer" parent="."]
wait_time = 0.08
one_shot = true

[connection signal="timeout" from="jump cancel Timer" to="." method="_on_jump_cancel_timer_timeout"]
[connection signal="body_entered" from="enemy checker" to="." method="_on_enemy_checker_body_entered"]
[connection signal="timeout" from="recover timer" to="." method="_on_recover_timer_timeout"]
[connection signal="timeout" from="invincible timer" to="." method="_on_invincible_timer_timeout"]
